# fst_bkp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  conanfile.txt  format.sh  license
.github/workflows/: cmake.yml
bench/aligned_buffer/: aligned_buffer.cpp
bench/string_conv/: string_conv.cpp
cmake/: fstConfig.cmake.in
dev/: main.cpp
example/: main.cpp
example/array/: CMakeLists.txt  main.cpp
example/engine/: CMakeLists.txt  main.cpp
example/engine/include/engine/: def.hpp  engine.hpp  entity.hpp  math.hpp  transform.hpp
example/engine/include/engine/event/: keyboard.hpp  manager.hpp
example/engine/include/engine/graphic/: renderer.hpp  shader.hpp  vertex_buffer.hpp
example/engine/include/game/: game.hpp
example/engine/include/game/component/: dont_touch.hpp  square.hpp  triangle.hpp  xmover.hpp  ymover.hpp  zrotator.hpp
example/engine/source/engine/: engine.cpp
example/engine/source/engine/event/: manager.cpp
example/engine/source/engine/graphic/: renderer.cpp  shader.cpp  vertex_buffer.cpp
example/engine/source/game/component/: dont_touch.cpp  square.cpp  triangle.cpp  xmover.cpp  ymover.cpp  zrotator.cpp
example/event/: CMakeLists.txt  main.cpp
example/fstring/: CMakeLists.txt  main.cpp
example/heap_aligned_storage/: CMakeLists.txt  main.cpp
example/io/: CMakeLists.txt  main.cpp
example/io_client/: CMakeLists.txt  main.cpp
example/multi_vector/: CMakeLists.txt  main.cpp
example/multi_vector2/: CMakeLists.txt  main.cpp
example/one_file_engine/: CMakeLists.txt  main.cpp
example/p_nodemodel_exp/: CMakeLists.txt  main.cpp
example/print/: CMakeLists.txt  main.cpp
example/string/: CMakeLists.txt  main.cpp
example/vector/: CMakeLists.txt  benchUtil.h  main.cpp
example/visitor/: CMakeLists.txt  benchUtil.h  main.cpp
include/fst/: aligned_buffer.h  array.h  ascii.h  assert.h  buffer_view.h  byte_buffer_view.h  byte_vector.h  byte_view.h  common.h  const_float.h  def  def.h  demangle.h  enum_array.h  enum_set.h  event.h  event_manager.h  file_buffer.h  fixed_unordered_set.h  fixed_vector.h  fst.h  heap_aligned_storage.h  int24_t.h  iterator.h  json.h  listener.h  mapped_file.h  math.h  memory.h  meta.h  multi_key_vector.h  multi_vector.h  pointer.h  print  print.h  range.h  ring_array.h  scoped_singleton.h  shared_singleton.h  small_string.h  (+19 more)
include/fst/detail/dragonbox/: dragonbox.h  dragonbox_to_chars.h
include/fst/io/: dispatcher.h  fd.h  file.h  helper.h  local_socket.h  serial.h  status.h  tcp_acceptor.h  tcp_session.h  tcp_socket.h  udp_broadcast_listener.h  udp_broadcaster.h
include/fst/io/ip/: address.h
include/fst/io/local/: socket.h
include/fst/io/stream/: reader.h  receiver.h  sender.h  writer.h
include/fst/io/tcp/: acceptor.h  socket.h
include/fst/io/udp/: udp_broadcast_listener.h
include/fst/ui/: color.h  component.h  context.h  image.h  mouse_event.h  padding.h  path.h  point.h  rect.h  size.h
include/sparsehash/: template_util.h  type_traits.h
include/sparsehash/internal/: densehashtable.h  hashtable-common.h  libc_allocator_with_realloc.h  sparsehashtable.h
tests/: aligned_buffer.cpp  array.cpp  byte_vector.cpp  fixed_vector.cpp  int24_t.cpp  main.cpp  mapped_file.cpp  memory.cpp  shared_singleton.cpp  small_string.cpp  string_conv.cpp  system_path.cpp  test_types.h  traits.cpp  unordered_array.cpp
tests/aligned_buffer/: aligned_buffer.cpp
tests/byte_vector/: byte_vector.cpp
tests/file_buffer/: file_buffer.cpp
tests/fixed_vector/: fixed_vector.cpp
tests/mapped_file/: mapped_file.cpp
tests/pointer/: pointer.cpp
tests/scoped_singleton/: scoped_singleton.cpp
tests/shared_singleton/: shared_singleton.cpp
tests/singleton/: singleton.cpp
tests/small_string/: small_string.cpp
tests/unordered_array/: unordered_array.cpp
tests/unordered_set/: unordered_set.cpp
